feat: data models, base CRUD methods (#1)
* update libs; fix docker-compose; add readme; add data models, add base crud methods; add migrations

* additional indexes for init migration

* remove return for some queries

* mod tidy

* rename duration var in db; change db methods params

* change to network.ntw_mask type to cidr

* add db methods

--- a/config.example.yml
+++ b/config.example.yml
@@ -7,9 +7,9 @@ metrics:
     is_enabled: false
     port: 9099
 postgres:
-    host: localhost
+    host: postgres
     port: 5432
     user: postgres
     pass: test
     database: extrnode
-    migrations_path: ""
+    migrations_path: "db/pg-migrations"
