feat: prepare for deploy (#22)
* remove config yml; fix compose; edit readme; remove docker pg migration; use env file for start

* add conmment

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
+# scanner
+SCANNER_THREADS_NUM=20
+
+# api
+API_PORT=8000
+
+# database
+PG_HOST=localhost
+PG_PORT=5432
 PG_USER=extrnode
 PG_PASS=somepass
 PG_DB=extrnode
+PG_MIGRATIONS_PATH=db/pg-migrations
