--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     restart: always
     tty: true
     ports:
-      - "80:8000"
+      - "${API_PORT}:8000"
     depends_on:
       - postgres
     env_file:
