--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     restart: always
     tty: true
     ports:
-      - "${API_PORT}:8000"
+      - "${API_PORT}:${API_PORT}"
       - "9099:9099"
     depends_on:
       - postgres
