feat(proxy): failover endpoints

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ SCANNER_THREADS_NUM=20
 API_PORT=443
 API_METRICS_PORT=9099
 API_CERT_FILE=certs/api.pem
+API_FAILOVER_ENDPOINTS=[{"url":"http://127.0.0.1:8001","reqLimitHourly":1},{"url":"http://127.0.0.1","reqLimitHourly":2}]
 
 # database
 PG_HOST=localhost
