feat(proxy): stats to clickhouse

--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,13 @@ API_METRICS_PORT=9099
 API_CERT_FILE=certs/api.pem
 API_FAILOVER_ENDPOINTS=[{"url":"http://127.0.0.1:8001","reqLimitHourly":1},{"url":"http://127.0.0.1","reqLimitHourly":2}]
 
-# database
+# PG database
 PG_HOST=localhost
 PG_PORT=5432
 PG_USER=extrnode
 PG_PASS=somepass
 PG_DB=extrnode
 PG_MIGRATIONS_PATH=db/pg-migrations
+
+# CH database
+CH_DSN=clickhouse://username:password@clickhouse:9000/extrnode?dial_timeout=500ms&max_execution_time=60
