--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,9 @@ SCANNER_THREADS_NUM=20
 # api
 API_PORT=443
 API_METRICS_PORT=9099
-API_CERT_FILE=certs/api.pem
+API_CERT_FILE=creds/api.pem
 API_FAILOVER_ENDPOINTS=[{"url":"http://127.0.0.1:8001","reqLimitHourly":1},{"url":"http://127.0.0.1","reqLimitHourly":2}]
+API_FIREBASE_FILE_PATH=creds/firebase.json
 
 # PG database
 PG_HOST=localhost
