feat(proxy): api refactor

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,14 @@ SCANNER_THREADS_NUM=20
 
 # api
 API_PORT=443
-API_METRICS_PORT=9099
 API_CERT_FILE=creds/api.pem
-API_FAILOVER_ENDPOINTS=[{"url":"http://127.0.0.1:8001","reqLimitHourly":1},{"url":"http://127.0.0.1","reqLimitHourly":2}]
 API_FIREBASE_FILE_PATH=creds/firebase.json
+
+# proxy
+PROXY_PORT=8001
+PROXY_METRICS_PORT=9099
+PROXY_CERT_FILE=creds/api.pem
+PROXY_FAILOVER_ENDPOINTS=[{"url":"http://127.0.0.1:8001","reqLimitHourly":1},{"url":"http://127.0.0.1","reqLimitHourly":2}]
 
 # PG database
 PG_HOST=localhost
