feat(scanner): save scan logs to clickhouse

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # scanner
 SCANNER_THREADS_NUM=20
+# custom label for identifying server in clickhouse scanner log history
+SCANNER_HOSTNAME=server_hostname
 
 # api
 API_PORT=443
