--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,22 @@
 # scanner
+# how many threads the scanner uses
 SCANNER_THREADS_NUM=20
 # custom label for identifying server in clickhouse scanner log history
 SCANNER_HOSTNAME=server_hostname
 
 # api
 API_PORT=443
+# path to certs for https (optional)
 API_CERT_FILE=creds/api.pem
+# config file for firebase (required)
 API_FIREBASE_FILE_PATH=creds/firebase.json
 
 # proxy
 PROXY_PORT=8001
 PROXY_METRICS_PORT=9099
+# path to certs for https (optional)
 PROXY_CERT_FILE=creds/api.pem
+# failover endpoints for proxy. Json encoded object array (optional)
 PROXY_FAILOVER_ENDPOINTS=[{"url":"http://127.0.0.1:8001","reqLimitHourly":1},{"url":"http://127.0.0.1","reqLimitHourly":2}]
 
 # PG database
@@ -19,6 +24,7 @@ PG_HOST=localhost
 PG_PORT=5432
 PG_USER=extrnode
 PG_PASS=somepass
+# database name
 PG_DB=extrnode
 PG_MIGRATIONS_PATH=db/pg-migrations
 
