feat(storage): replace posgres by sqlite

--- a/.env.example
+++ b/.env.example
@@ -28,5 +28,9 @@ PG_PASS=somepass
 PG_DB=extrnode
 PG_MIGRATIONS_PATH=db/pg-migrations
 
+# SL database
+SL_DB_PATH=sqlite/sqlite.db
+SL_MIGRATIONS_PATH=db/sl-migrations
+
 # CH database
 CH_DSN=clickhouse://username:password@clickhouse:9000/extrnode?dial_timeout=500ms&max_execution_time=60
