feat(api): separate api

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,18 @@ SCANNER_THREADS_NUM=20
 # custom label for identifying server in clickhouse scanner log history
 SCANNER_HOSTNAME=server_hostname
 
-# api
-API_PORT=443
+# scanner api
+SAPI_PORT=443
 # path to certs for https (optional)
-API_CERT_FILE=creds/api.pem
+SAPI_CERT_FILE=creds/api.pem
+
+# user api
+UAPI_PORT=444
+# path to certs for https (optional)
+UAPI_CERT_FILE=creds/api.pem
 # config file for firebase (required)
-API_FIREBASE_FILE_PATH=creds/firebase.json
+UAPI_FIREBASE_FILE_PATH=creds/firebase.json
+
 
 # proxy
 PROXY_PORT=8001
