feat: split env files; split config validation

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,6 @@ UAPI_CERT_FILE=creds/api.pem
 # config file for firebase (required)
 UAPI_FIREBASE_FILE_PATH=creds/firebase.json
 
-
 # proxy
 PROXY_PORT=8001
 PROXY_METRICS_PORT=9099
@@ -38,5 +37,5 @@ PG_MIGRATIONS_PATH=db/pg-migrations
 SL_DB_PATH=sqlite/sqlite.db
 SL_MIGRATIONS_PATH=db/sl-migrations
 
-# CH database
+# CH database (optional, can be empty)
 CH_DSN=clickhouse://username:password@clickhouse:9000/extrnode?dial_timeout=500ms&max_execution_time=60
